--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.2",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.15.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^2.0.3",
