--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "postcss": "^8",
