--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.2",
     "lucide-react": "^0.511.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.15.0",
     "next": "14.2.5",
     "next-auth": "^4.24.11",
