--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.511.0",
     "moment": "^2.30.1",
     "mongoose": "^8.15.0",
+    "nanoid": "^5.1.5",
     "next": "14.2.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
@@ -33,6 +34,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
